dist/1.0/bin/sample/retrieveUnpackaged/objects/Enumerators__c.object
<CustomObject>
    <description>Object storing dictionaries for the Fields</description>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Dictionary</description>
        <inlineHelpText>Type of Dictionary</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACC_CLASS_VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACC_CUSTOMER_CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA_INVOICE_DELIVERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA_INVOICE_LANGUAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA_INVOICE_LAYOUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA_PAYMENT_METHOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIM_BUSINESS_UNIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIM_FINANCIAL_PRODUCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIM_POP_ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACC_NACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTR_BINDING_PERIOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACC_NACE2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTR_BINDING_PERIOD_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI_FINANCIAL_PRODUCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;C_LOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTR_ATTRIBUTE_SET_CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI_INVOICING_CATEGORIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI_UNITS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI_VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COM_LOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIN_STATUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUN_LOB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value for defined descrciption</description>
        <inlineHelpText>Value for defined descrciption</inlineHelpText>
        <label>Value</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Enumerator</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Enumerators_SK</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Source_Record_Id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>BA_PAYMENT_METHOD</value>
        </filters>
        <label>Enumerators.SK</label>
    </listViews>
    <listViews>
        <fullName>Financial_Products</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>PI_FINANCIAL_PRODUCT</value>
        </filters>
        <label>Financial Products</label>
    </listViews>
    <listViews>
        <fullName>HU_gL_codes</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>PI_FINANCIAL_PRODUCT</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>HU_</value>
        </filters>
        <label>HU gL codes</label>
    </listViews>
    <listViews>
        <fullName>Line_of_Business</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>B&amp;C_LOB</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>BUN_LOB</value>
        </filters>
        <label>Line of Business</label>
    </listViews>
    <listViews>
        <fullName>NACE_Code</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>ACC_NACE,ACC_NACE2</value>
        </filters>
        <label>NACE_Code</label>
        <sharedTo>
            <groups>Administrators</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PI_FINANCIAL_PRODUCT</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>PI_FINANCIAL_PRODUCT</value>
        </filters>
        <label>PI_FINANCIAL_PRODUCT</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Account_00N200000026LVLEA2</fullName>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <field>Account.ClassVAT__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>ACC_CLASS_VAT</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Class VAT</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00N200000026LVMEA2</fullName>
        <active>true</active>
        <field>Account.CustomerClass__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>ACC_CUSTOMER_CLASS</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Customer Class</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00N200000026LVNEA2</fullName>
        <active>false</active>
        <field>Account.Financial_Status__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>FIN_STATUS</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Financial Status</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00N200000026LVOEA2</fullName>
        <active>true</active>
        <field>Account.NACE_2nd_level__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>ACC_NACE2</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_NACE (2nd level)</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00N200000026LVPEA2</fullName>
        <active>true</active>
        <field>Account.NACE__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>ACC_NACE</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_NACE</name>
    </namedFilters>
    <namedFilters>
        <fullName>Contract_00N200000026PsvEAE</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>Contract.Binding_Period__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>CONTR_BINDING_PERIOD</value>
        </filterItems>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>CONTR_BINDING_PERIOD_2</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contract_Binding Period</name>
    </namedFilters>
    <namedFilters>
        <fullName>Lead_00N20000002hRHsEAM</fullName>
        <active>true</active>
        <field>Lead.NACE__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>ACC_NACE</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Lead_NACE</name>
    </namedFilters>
    <namedFilters>
        <fullName>Product2_00N200000026LUkEAM</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>Product2.Line_of_Business__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>B&amp;C_LOB</value>
        </filterItems>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BUN_LOB</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Product_Line of Business</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I200000002dusEAA_00N200000026LVQEA2</fullName>
        <active>true</active>
        <field>COrder__c.BusinessUnit__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>DIM_BUSINESS_UNIT</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order_Business Unit</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I200000002dusEAA_00N200000026LVREA2</fullName>
        <active>true</active>
        <field>COrder__c.InvoiceDelivery__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BA_INVOICE_DELIVERY</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order_Invoice Delivery</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I200000002dusEAA_00N200000026LVSEA2</fullName>
        <active>true</active>
        <field>COrder__c.InvoiceLanguage__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BA_INVOICE_LANGUAGE</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order_Invoice Language</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I200000002dusEAA_00N200000026LVTEA2</fullName>
        <active>true</active>
        <field>COrder__c.InvoiceLayout__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BA_INVOICE_LAYOUT</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order_Invoice Layout</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I200000002dusEAA_00N200000026LVUEA2</fullName>
        <active>true</active>
        <field>COrder__c.PaymentMethod__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BA_PAYMENT_METHOD</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order_Payment Method</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H93vEAC_00N200000026Kn9EAE</fullName>
        <active>true</active>
        <field>Attribute_Set_Type__c.Enumerator__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>ASTR_ATTRIBUTE_SET_CLASS</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Attribute Set Type_Line of Business</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H93zEAC_00N200000026Mh5EAE</fullName>
        <active>true</active>
        <field>Billing_Accounts__c.Business_Unit__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>DIM_BUSINESS_UNIT</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Billing Account_Business Unit</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H93zEAC_00N200000026MhBEAU</fullName>
        <active>true</active>
        <field>Billing_Accounts__c.Financial_Status__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>FIN_STATUS</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Billing Account_Financial Status</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H93zEAC_00N200000026MhEEAU</fullName>
        <active>true</active>
        <field>Billing_Accounts__c.InvoiceDelivery__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BA_INVOICE_DELIVERY</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Billing Account_Invoice Delivery</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H93zEAC_00N200000026MhFEAU</fullName>
        <active>true</active>
        <field>Billing_Accounts__c.InvoiceLanguage__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BA_INVOICE_LANGUAGE</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Billing Account_Invoice Language</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H93zEAC_00N200000026MhGEAU</fullName>
        <active>true</active>
        <field>Billing_Accounts__c.InvoiceLayout__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BA_INVOICE_LAYOUT</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Billing Account_Invoice Layout</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H93zEAC_00N200000026MhKEAU</fullName>
        <active>true</active>
        <field>Billing_Accounts__c.PaymentMethod__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BA_PAYMENT_METHOD</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Billing Account_Payment Method</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H93zEAC_00N200000026UOSEA2</fullName>
        <active>true</active>
        <field>Billing_Accounts__c.Class_VAT__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>ACC_CLASS_VAT</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Billing Account_Class VAT</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H93zEAC_00N2000000275hmEAA</fullName>
        <active>true</active>
        <field>Billing_Accounts__c.Customer_Class__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>ACC_CUSTOMER_CLASS</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Billing Account_Customer Class</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H949EAC_00N200000026KzbEAE</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>Component__c.Line_of_Business__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>B&amp;C_LOB</value>
        </filterItems>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>COM_LOB</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Component_Line of Business</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94mEAC_00N200000026MjCEAU</fullName>
        <active>true</active>
        <field>PricingItem__c.Financial_Product__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>PI_FINANCIAL_PRODUCT</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Pricing Item_Financial Product</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94mEAC_00N200000026MjDEAU</fullName>
        <active>true</active>
        <field>PricingItem__c.Invoicing_Category__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>PI_INVOICING_CATEGORIES</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Pricing Item_Invoicing Category</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94mEAC_00N200000026MjEEAU</fullName>
        <active>true</active>
        <field>PricingItem__c.Unit__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>PI_UNITS</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Pricing Item_Unit</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94mEAC_00N200000026MjFEAU</fullName>
        <active>true</active>
        <field>PricingItem__c.VAT_Enum__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>PI_VAT</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Pricing Item_VAT</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94uEAC_00N200000026MAsEAM</fullName>
        <active>true</active>
        <field>Simplified_Order__c.Binding_Period__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>CONTR_BINDING_PERIOD</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Simplified Order_Binding Period</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94uEAC_00N200000026MAuEAM</fullName>
        <active>true</active>
        <field>Simplified_Order__c.Class_VAT__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>ACC_CLASS_VAT</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Simplified Order_Class VAT</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94uEAC_00N200000026MB2EAM</fullName>
        <active>true</active>
        <field>Simplified_Order__c.Invoice_Delivery__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BA_INVOICE_DELIVERY</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Simplified Order_Invoice Delivery</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94uEAC_00N200000026MB3EAM</fullName>
        <active>true</active>
        <field>Simplified_Order__c.Invoice_Language__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>BA_INVOICE_LANGUAGE</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Simplified Order_Invoice Language</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000HEb0EAG_00N2000000275C6EAI</fullName>
        <active>true</active>
        <errorMessage>Chosen value is not acceptable Enumerator LOB instance. Correct values are: VOICE, DATA, INTERNET, OTHER, COMPLEX</errorMessage>
        <field>CProduct__c.Line_of_Business__c</field>
        <filterItems>
            <field>Enumerators__c.Type__c</field>
            <operation>equals</operation>
            <value>B&amp;C_LOB</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Bundle_Line of Business</name>
    </namedFilters>
    <pluralLabel>Enumerators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>